--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,10 @@
     text-decoration: none;
 }
 
+.btn-primary:hover {
+    background-color: #03805b;
+}
+
 .title {
     font-family: "Georgia", sans-serif;
     font-weight: 700;
@@ -115,6 +119,25 @@
     color: #292929;
     margin: 0 30px;
     font-weight: 500;
+    position: relative;
+}
+
+.header__link::before,
+.header__sign-in::before {
+    content: '';
+    width: 100%;
+    height: 2px;
+    background-color: #000000;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    transform: scaleX(0);
+    transition: 0.3s;
+}
+
+.header__link:hover:before,
+.header__sign-in:hover:before {
+    transform: scaleX(1);
 }
 
 .header__logo {
@@ -129,6 +152,7 @@
 .header__sign-in {
     text-decoration: none;
     font-weight: 400;
+    position: relative;
 }
 
 .header__start-trial {
@@ -147,13 +171,24 @@
 /* style first section */
 .section-1 {
     height: 895px;
-    background: #FAF7FF url("../img/1.jpg") no-repeat right top/90% auto;
-    background-size: auto 895px;
+    background: #FAF7FF;
     position: relative;
     padding-left: 14%;
 }
 
+
 .section-1::before {
+    height: 895px;
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    width: 90%;
+    background: url("../img/1.jpg") no-repeat top right/cover;
+}
+
+.section-1::after {
     content: "";
     position: absolute;
     top: 0;
@@ -164,6 +199,7 @@
     z-index: 0;
     pointer-events: none;
 }
+
 
 .section-1__content {
     padding-top: 175px;
@@ -261,6 +297,10 @@
     justify-content: space-between;
 }
 
+.section-3__content {
+    width: 40%;
+}
+
 .section-3__title {
     font-weight: 700;
     font-size: 50px;
@@ -281,6 +321,8 @@
 
 .section3__video {
     border-radius: 20px;
+    width: 60%;
+    height: auto;
 }
 
 /* style fourth section */
@@ -296,6 +338,13 @@
     margin-left: 60px;
     margin-right: 80px;
     border-radius: 18px;
+    max-width: 50%;
+    height: auto;
+    object-fit: contain;
+}
+
+.section-4__content {
+    max-width: 50%;
 }
 
 .section-4__our-product {
@@ -410,6 +459,23 @@ footer {
     font-size: 25px;
     line-height: 30px;
     text-decoration: none;
+    position: relative;
+}
+
+.footer__link::before {
+    content: '';
+    width: 100%;
+    height: 2px;
+    background-color: #ffffff;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    transform: scaleX(0);
+    transition: 0.3s;
+}
+
+.footer__link:hover:before {
+    transform: scaleX(1);
 }
 
 .social-networks {
@@ -444,6 +510,11 @@ footer {
     align-items: center;
 }
 
+.social-networks a:hover,
+.discover-solutions__links a:hover {
+    opacity: 0.8;
+}
+
 .discover-solutions {
     align-self: end;
 }
@@ -456,7 +527,7 @@ footer {
     letter-spacing: 0.005em;
     color: #FFFFFF;
     margin-bottom: 30px;
-    margin-left: 185px;
+    text-align: center;
 }
 
 .discover-solutions__links {
